# fpga-hft-data-generator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  config.toml  init.sql  railway.toml
clickhouse/: Dockerfile  memory.xml  users.xml
schema/: schema.sql
src/: api.rs  config.rs  db.rs  generator.rs  main.rs  models.rs  ws.rs
