[package]
name = "fpga-hft-data-generator"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = "full"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clickhouse = "0.11"
dashmap = "7.0.0-rc2"
tokio-util = { version = "0.7.18", features = ["rt"] }
prometheus = "0.14.0"
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0.69"
log = "0.4.29"
futures-util = "0.3.32"
